crates/kybern-protocol/tests/snapshots/schema_snapshot__event_schema_is_stable.snap
---
source: crates/kybern-protocol/tests/schema_snapshot.rs
expression: schema_for!(ThreadEvent)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ThreadEvent",
  "type": "object",
  "properties": {
    "seq": {
      "type": "integer",
      "format": "int64"
    },
    "thread_id": {
      "type": "string",
      "format": "uuid"
    },
    "turn_id": {
      "type": [
        "string",
        "null"
      ],
      "format": "uuid"
    },
    "at": {
      "type": "string",
      "format": "date-time"
    }
  },
  "required": [
    "seq",
    "thread_id",
    "at"
  ],
  "oneOf": [
    {
      "type": "object",
      "properties": {
        "thread": {
          "$ref": "#/$defs/Thread"
        },
        "kind": {
          "type": "string",
          "const": "thread_created"
        }
      },
      "required": [
        "kind",
        "thread"
      ]
    },
    {
      "description": "Title, model, permission mode, pin, status or session changed.",
      "type": "object",
      "properties": {
        "thread": {
          "$ref": "#/$defs/Thread"
        },
        "kind": {
          "type": "string",
          "const": "thread_updated"
        }
      },
      "required": [
        "kind",
        "thread"
      ]
    },
    {
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "thread_archived"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "type": "object",
      "properties": {
        "message_id": {
          "type": "string",
          "format": "uuid"
        },
        "message": {
          "$ref": "#/$defs/UserMessage"
        },
        "kind": {
          "type": "string",
          "const": "turn_started"
        }
      },
      "required": [
        "kind",
        "message_id",
        "message"
      ]
    },
    {
      "description": "Provider assigned or confirmed its own session id.",
      "type": "object",
      "properties": {
        "session_id": {
          "type": "string"
        },
        "model": {
          "type": [
            "string",
            "null"
          ]
        },
        "kind": {
          "type": "string",
          "const": "provider_session_bound"
        }
      },
      "required": [
        "kind",
        "session_id"
      ]
    },
    {
      "type": "object",
      "properties": {
        "message_id": {
          "type": "string",
          "format": "uuid"
        },
        "delta": {
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "assistant_text_delta"
        }
      },
      "required": [
        "kind",
        "message_id",
        "delta"
      ]
    },
    {
      "type": "object",
      "properties": {
        "message_id": {
          "type": "string",
          "format": "uuid"
        },
        "delta": {
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "assistant_thinking_delta"
        }
      },
      "required": [
        "kind",
        "message_id",
        "delta"
      ]
    },
    {
      "type": "object",
      "properties": {
        "message_id": {
          "type": "string",
          "format": "uuid"
        },
        "text": {
          "type": "string"
        },
        "thinking": {
          "type": [
            "string",
            "null"
          ]
        },
        "kind": {
          "type": "string",
          "const": "assistant_message_completed"
        }
      },
      "required": [
        "kind",
        "message_id",
        "text"
      ]
    },
    {
      "type": "object",
      "properties": {
        "call": {
          "$ref": "#/$defs/ToolCall"
        },
        "kind": {
          "type": "string",
          "const": "tool_call_started"
        }
      },
      "required": [
        "kind",
        "call"
      ]
    },
    {
      "type": "object",
      "properties": {
        "tool_call_id": {
          "type": "string"
        },
        "delta": {
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "tool_call_output_delta"
        }
      },
      "required": [
        "kind",
        "tool_call_id",
        "delta"
      ]
    },
    {
      "type": "object",
      "properties": {
        "tool_call_id": {
          "type": "string"
        },
        "output": true,
        "is_error": {
          "type": "boolean"
        },
        "kind": {
          "type": "string",
          "const": "tool_call_completed"
        }
      },
      "required": [
        "kind",
        "tool_call_id",
        "output",
        "is_error"
      ]
    },
    {
      "type": "object",
      "properties": {
        "approval": {
          "$ref": "#/$defs/ApprovalRequest"
        },
        "kind": {
          "type": "string",
          "const": "approval_requested"
        }
      },
      "required": [
        "kind",
        "approval"
      ]
    },
    {
      "type": "object",
      "properties": {
        "approval_id": {
          "type": "string",
          "format": "uuid"
        },
        "decision": {
          "$ref": "#/$defs/ApprovalDecision"
        },
        "kind": {
          "type": "string",
          "const": "approval_resolved"
        }
      },
      "required": [
        "kind",
        "approval_id",
        "decision"
      ]
    },
    {
      "type": "object",
      "properties": {
        "stop_reason": {
          "$ref": "#/$defs/StopReason"
        },
        "usage": {
          "$ref": "#/$defs/Usage"
        },
        "cost_usd": {
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "duration_ms": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "kind": {
          "type": "string",
          "const": "turn_completed"
        }
      },
      "required": [
        "kind",
        "stop_reason",
        "usage",
        "duration_ms"
      ]
    },
    {
      "type": "object",
      "properties": {
        "error": {
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "turn_failed"
        }
      },
      "required": [
        "kind",
        "error"
      ]
    },
    {
      "description": "Provider emitted an informational notice (compaction, status, warnings).",
      "type": "object",
      "properties": {
        "level": {
          "$ref": "#/$defs/NoticeLevel"
        },
        "text": {
          "type": "string"
        },
        "data": true,
        "kind": {
          "type": "string",
          "const": "provider_notice"
        }
      },
      "required": [
        "kind",
        "level",
        "text"
      ]
    },
    {
      "description": "A git checkpoint was taken or completed for this turn.",
      "type": "object",
      "properties": {
        "checkpoint": {
          "$ref": "#/$defs/Checkpoint"
        },
        "kind": {
          "type": "string",
          "const": "checkpoint_updated"
        }
      },
      "required": [
        "kind",
        "checkpoint"
      ]
    },
    {
      "description": "The working tree was reset to the state before `turn_id`.",
      "type": "object",
      "properties": {
        "to_turn_id": {
          "type": "string",
          "format": "uuid"
        },
        "commit": {
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "workspace_reverted"
        }
      },
      "required": [
        "kind",
        "to_turn_id",
        "commit"
      ]
    }
  ],
  "$defs": {
    "Thread": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string",
          "format": "uuid"
        },
        "project_id": {
          "type": "string",
          "format": "uuid"
        },
        "title": {
          "type": "string"
        },
        "provider": {
          "$ref": "#/$defs/ProviderInstance"
        },
        "model": {
          "type": [
            "string",
            "null"
          ]
        },
        "effort": {
          "type": [
            "string",
            "null"
          ]
        },
        "permission_mode": {
          "$ref": "#/$defs/PermissionMode"
        },
        "status": {
          "$ref": "#/$defs/ThreadStatus"
        },
        "worktree": {
          "anyOf": [
            {
              "$ref": "#/$defs/WorktreeInfo"
            },
            {
              "type": "null"
            }
          ]
        },
        "cwd": {
          "description": "Working directory the agent runs in: the worktree path or the project path.",
          "type": "string"
        },
        "provider_session_id": {
          "description": "The provider's own session id once bound, used for resume and fork.",
          "type": [
            "string",
            "null"
          ]
        },
        "pinned": {
          "type": "boolean"
        },
        "created_at": {
          "type": "string",
          "format": "date-time"
        },
        "updated_at": {
          "type": "string",
          "format": "date-time"
        },
        "last_seq": {
          "description": "Sequence of the last event on this thread. Clients use it to detect gaps.",
          "type": "integer",
          "format": "int64"
        }
      },
      "required": [
        "id",
        "project_id",
        "title",
        "provider",
        "permission_mode",
        "status",
        "cwd",
        "pinned",
        "created_at",
        "updated_at",
        "last_seq"
      ]
    },
    "ProviderInstance": {
      "description": "A configured account/instance of a provider. `default` is created implicitly.",
      "type": "object",
      "properties": {
        "kind": {
          "$ref": "#/$defs/ProviderKind"
        },
        "instance": {
          "type": "string"
        }
      },
      "required": [
        "kind",
        "instance"
      ]
    },
    "ProviderKind": {
      "description": "Coding agent backends the daemon can drive. Each has its own native driver.",
      "type": "string",
      "enum": [
        "claude-code",
        "codex",
        "opencode",
        "pi",
        "omp",
        "cursor"
      ]
    },
    "PermissionMode": {
      "description": "The four permission modes, mirroring T3 Code.",
      "oneOf": [
        {
          "description": "Every tool call that mutates or executes asks for approval.",
          "type": "string",
          "const": "supervised"
        },
        {
          "description": "File edits proceed; shell and network still ask.",
          "type": "string",
          "const": "accept-edits"
        },
        {
          "description": "The provider decides with its own safety heuristics; asks only when unsure.",
          "type": "string",
          "const": "auto"
        },
        {
          "description": "Nothing asks. Sandboxing is the provider's problem.",
          "type": "string",
          "const": "full-access"
        }
      ]
    },
    "ThreadStatus": {
      "type": "string",
      "enum": [
        "idle",
        "running",
        "awaiting-approval",
        "failed",
        "archived"
      ]
    },
    "WorktreeInfo": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "branch": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "branch"
      ]
    },
    "UserMessage": {
      "type": "object",
      "properties": {
        "parts": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/ContentPart"
          }
        }
      },
      "required": [
        "parts"
      ]
    },
    "ContentPart": {
      "description": "One piece of a user message.",
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "text": {
              "type": "string"
            },
            "type": {
              "type": "string",
              "const": "text"
            }
          },
          "required": [
            "type",
            "text"
          ]
        },
        {
          "description": "Inline image. `data` is base64 of the raw bytes.",
          "type": "object",
          "properties": {
            "media_type": {
              "type": "string"
            },
            "data": {
              "type": "string"
            },
            "type": {
              "type": "string",
              "const": "image"
            }
          },
          "required": [
            "type",
            "media_type",
            "data"
          ]
        },
        {
          "description": "Uploaded attachment served by the daemon's HTTP asset route.",
          "type": "object",
          "properties": {
            "asset_id": {
              "type": "string",
              "format": "uuid"
            },
            "name": {
              "type": "string"
            },
            "media_type": {
              "type": "string"
            },
            "size": {
              "type": "integer",
              "format": "uint64",
              "minimum": 0
            },
            "type": {
              "type": "string",
              "const": "attachment"
            }
          },
          "required": [
            "type",
            "asset_id",
            "name",
            "media_type",
            "size"
          ]
        },
        {
          "description": "`@path` mention resolved relative to the thread cwd.",
          "type": "object",
          "properties": {
            "path": {
              "type": "string"
            },
            "type": {
              "type": "string",
              "const": "file_mention"
            }
          },
          "required": [
            "type",
            "path"
          ]
        }
      ]
    },
    "ToolCall": {
      "description": "A tool invocation as shown in the transcript.",
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "input": true,
        "parent_id": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "id",
        "name",
        "input"
      ]
    },
    "ApprovalRequest": {
      "description": "A pending or resolved request for the user to approve a tool call.",
      "type": "object",
      "properties": {
        "id": {
          "type": "string",
          "format": "uuid"
        },
        "thread_id": {
          "type": "string",
          "format": "uuid"
        },
        "turn_id": {
          "type": "string",
          "format": "uuid"
        },
        "tool_call_id": {
          "description": "Provider's tool-call id, when the provider exposes one.",
          "type": [
            "string",
            "null"
          ]
        },
        "tool_name": {
          "type": "string"
        },
        "input": {
          "description": "Provider-native input, rendered by the client (command, file path, diff, ...)."
        },
        "summary": {
          "description": "Human-readable one-line summary, e.g. `bash: git status`.",
          "type": "string"
        },
        "suggestions": {
          "description": "Provider-suggested \"always allow\" rules the client may offer.",
          "type": "array",
          "items": true,
          "default": []
        },
        "created_at": {
          "type": "string",
          "format": "date-time"
        }
      },
      "required": [
        "id",
        "thread_id",
        "turn_id",
        "tool_name",
        "input",
        "summary",
        "created_at"
      ]
    },
    "ApprovalDecision": {
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "decision": {
              "type": "string",
              "const": "allow_once"
            }
          },
          "required": [
            "decision"
          ]
        },
        {
          "description": "Allow and, where the provider supports it, remember for the session.",
          "type": "object",
          "properties": {
            "decision": {
              "type": "string",
              "const": "allow_always"
            }
          },
          "required": [
            "decision"
          ]
        },
        {
          "type": "object",
          "properties": {
            "reason": {
              "type": [
                "string",
                "null"
              ]
            },
            "decision": {
              "type": "string",
              "const": "deny"
            }
          },
          "required": [
            "decision"
          ]
        }
      ]
    },
    "StopReason": {
      "type": "string",
      "enum": [
        "completed",
        "interrupted",
        "max_turns",
        "error"
      ]
    },
    "Usage": {
      "type": "object",
      "properties": {
        "input_tokens": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "output_tokens": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "cache_read_tokens": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0,
          "default": 0
        },
        "cache_write_tokens": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0,
          "default": 0
        }
      },
      "required": [
        "input_tokens",
        "output_tokens"
      ]
    },
    "NoticeLevel": {
      "type": "string",
      "enum": [
        "info",
        "warning",
        "error"
      ]
    },
    "Checkpoint": {
      "description": "Git snapshots bracketing one turn. `after` is absent while the turn runs.",
      "type": "object",
      "properties": {
        "thread_id": {
          "type": "string",
          "format": "uuid"
        },
        "turn_id": {
          "type": "string",
          "format": "uuid"
        },
        "before": {
          "description": "Commit hash of the working tree before the turn started.",
          "type": "string"
        },
        "after": {
          "description": "Commit hash after the turn ended.",
          "type": [
            "string",
            "null"
          ]
        },
        "provider_turn_id": {
          "description": "Provider-side id of this turn, for conversation rewind.",
          "type": [
            "string",
            "null"
          ]
        },
        "provider_turn_end": {
          "description": "Provider-side id of the last entry of this turn, for conversation rewind.",
          "type": [
            "string",
            "null"
          ]
        },
        "created_at": {
          "type": "string",
          "format": "date-time"
        }
      },
      "required": [
        "thread_id",
        "turn_id",
        "before",
        "created_at"
      ]
    }
  }
}
