crates/kybern-protocol/tests/snapshots/schema_snapshot__events_subscribe_result.snap
---
source: crates/kybern-protocol/tests/schema_snapshot.rs
expression: schema_for!(EventsSubscribeResult)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "EventsSubscribeResult",
  "type": "object",
  "properties": {
    "subscription_id": {
      "type": "string",
      "format": "uuid"
    },
    "head_seq": {
      "description": "Latest persisted seq at subscribe time. Replay covers up to and including this.",
      "type": "integer",
      "format": "int64"
    },
    "replay_ready": {
      "description": "This daemon sends `events.ready` after replay, before live delivery resumes.",
      "type": "boolean",
      "default": false
    }
  },
  "required": [
    "subscription_id",
    "head_seq"
  ]
}
