crates/kybern-protocol/tests/snapshots/schema_snapshot__method_registry_is_stable.snap
---
source: crates/kybern-protocol/tests/schema_snapshot.rs
expression: names
---
- daemon.info
- daemon.shutdown
- daemon.activity
- sessions.list
- sessions.resume
- providers.list
- providers.accounts.create
- providers.accounts.sign_in
- providers.accounts.usage
- providers.accounts.catalog
- threads.target.get
- threads.target.set
- threads.permissions.apply
- threads.switch_continue
- harness_updates.list
- harness_updates.run
- daemon_update.status
- daemon_update.check
- daemon_update.run
- projects.list
- projects.browse
- projects.add
- projects.update
- projects.remove
- threads.list
- threads.search
- threads.read
- threads.create
- threads.get
- threads.tool_output
- threads.recover_omp_answer
- threads.update
- threads.archive
- threads.send
- threads.steer
- subagents.send
- subagents.messages
- subagents.send_to_parent
- threads.notes.get
- threads.notes.set
- notes.list
- notes.get
- notes.create
- notes.update
- notes.pin
- notes.move
- notes.delete
- notes.restore
- notes.purge
- notes.search
- tasks.items.list
- tasks.items.get
- tasks.items.create
- tasks.items.update
- tasks.items.delete
- tasks.items.restore
- tasks.items.send
- tasks.items.send_batch
- tasks.items.followup
- queue.add
- queue.update
- queue.list
- queue.remove
- threads.release
- threads.compact
- threads.answer
- threads.interrupt
- threads.messages.list
- threads.messages.deliver
- threads.messages.dismiss
- delegations.worktree_remove
- collaboration.groups.create
- collaboration.coordinator.get
- collaboration.coordinator.get_or_create
- collaboration.coordinator.switch_harness
- collaboration.coordinator.delete
- collaboration.groups.get
- collaboration.groups.list
- collaboration.groups.update
- collaboration.groups.control
- collaboration.members.attach
- collaboration.members.detach
- collaboration.assignments.create
- collaboration.assignments.get
- collaboration.assignments.list
- collaboration.assignments.update
- collaboration.assignments.complete
- collaboration.assignments.cancel
- collaboration.messages.send
- collaboration.messages.list
- collaboration.context.put
- collaboration.context.list
- collaboration.context.history
- collaboration.wait
- tasks.list
- tasks.stop
- tasks.background
- threads.regenerateTitle
- threads.checkpoints
- threads.diff
- threads.revert
- terminals.create
- terminals.list
- terminals.input
- terminals.resize
- terminals.close
- terminals.subscribe
- terminals.unsubscribe
- settings.get
- settings.update
- computer.status
- computer.setup
- cursor.status
- cursor.setup
- computer.frame
- computer.notes.list
- computer.notes.set
- usage.summary
- usage.limits
- access.pairing.create
- access.exposure.get
- access.exposure.set
- access.tokens.list
- access.tokens.revoke
- git.status
- git.branches
- git.commit
- github.pr.create
- github.pr.list
- github.pr.detail
- github.pr.page
- github.pr.action
- threads.worktree.inspect
- threads.worktree.remove
- files.search
- files.list
- files.read
- threads.files.read
- skills.list
- integrations.list
- threads.visuals.publish
- threads.visuals.preview
- threads.visuals.read
- threads.visuals.frame
- threads.visuals.revoke
- threads.artifacts.list
- threads.artifacts.read
- threads.artifacts.preview
- integrations.change
- integrations.login
- approvals.respond
- approvals.list
- events.subscribe
- events.unsubscribe
- events.range
