crates/kybern-protocol/tests/snapshots/schema_snapshot__method_scopes_are_stable.snap
---
source: crates/kybern-protocol/tests/schema_snapshot.rs
expression: scopes
---
- - daemon.info
  - ~
- - daemon.shutdown
  - "access:write"
- - daemon.activity
  - "orchestration:read"
- - sessions.list
  - "orchestration:read"
- - sessions.resume
  - "orchestration:operate"
- - providers.list
  - "orchestration:read"
- - harness_updates.list
  - "orchestration:read"
- - harness_updates.run
  - "orchestration:operate"
- - daemon_update.status
  - "orchestration:read"
- - daemon_update.check
  - "orchestration:operate"
- - daemon_update.run
  - "orchestration:operate"
- - projects.list
  - "orchestration:read"
- - projects.browse
  - "orchestration:read"
- - projects.add
  - "orchestration:operate"
- - projects.update
  - "orchestration:operate"
- - projects.remove
  - "orchestration:operate"
- - threads.list
  - "orchestration:read"
- - threads.search
  - "orchestration:read"
- - threads.read
  - "orchestration:read"
- - threads.create
  - "orchestration:operate"
- - threads.get
  - "orchestration:read"
- - threads.tool_output
  - "orchestration:read"
- - threads.update
  - "orchestration:operate"
- - threads.archive
  - "orchestration:operate"
- - threads.send
  - "orchestration:operate"
- - threads.steer
  - "orchestration:operate"
- - threads.notes.get
  - "orchestration:read"
- - threads.notes.set
  - "orchestration:operate"
- - notes.list
  - "orchestration:read"
- - notes.get
  - "orchestration:read"
- - notes.create
  - "orchestration:operate"
- - notes.update
  - "orchestration:operate"
- - notes.pin
  - "orchestration:operate"
- - notes.move
  - "orchestration:operate"
- - notes.delete
  - "orchestration:operate"
- - notes.restore
  - "orchestration:operate"
- - notes.purge
  - "orchestration:operate"
- - notes.search
  - "orchestration:read"
- - tasks.items.list
  - "orchestration:read"
- - tasks.items.get
  - "orchestration:read"
- - tasks.items.create
  - "orchestration:operate"
- - tasks.items.update
  - "orchestration:operate"
- - tasks.items.delete
  - "orchestration:operate"
- - tasks.items.restore
  - "orchestration:operate"
- - tasks.items.send
  - "orchestration:operate"
- - tasks.items.send_batch
  - "orchestration:operate"
- - tasks.items.followup
  - "orchestration:operate"
- - queue.add
  - "orchestration:operate"
- - queue.update
  - "orchestration:operate"
- - queue.list
  - "orchestration:read"
- - queue.remove
  - "orchestration:operate"
- - threads.release
  - "orchestration:operate"
- - threads.compact
  - "orchestration:operate"
- - threads.answer
  - "orchestration:operate"
- - threads.interrupt
  - "orchestration:operate"
- - threads.messages.list
  - "orchestration:read"
- - threads.messages.deliver
  - "orchestration:operate"
- - threads.messages.dismiss
  - "orchestration:operate"
- - delegations.worktree_remove
  - "orchestration:operate"
- - collaboration.groups.create
  - "orchestration:operate"
- - collaboration.coordinator.get
  - "orchestration:read"
- - collaboration.coordinator.get_or_create
  - "orchestration:operate"
- - collaboration.coordinator.switch_harness
  - "orchestration:operate"
- - collaboration.coordinator.delete
  - "orchestration:operate"
- - collaboration.groups.get
  - "orchestration:read"
- - collaboration.groups.list
  - "orchestration:read"
- - collaboration.groups.update
  - "orchestration:operate"
- - collaboration.groups.control
  - "orchestration:operate"
- - collaboration.members.attach
  - "orchestration:operate"
- - collaboration.members.detach
  - "orchestration:operate"
- - collaboration.assignments.create
  - "orchestration:operate"
- - collaboration.assignments.get
  - "orchestration:read"
- - collaboration.assignments.list
  - "orchestration:read"
- - collaboration.assignments.update
  - "orchestration:operate"
- - collaboration.assignments.complete
  - "orchestration:operate"
- - collaboration.assignments.cancel
  - "orchestration:operate"
- - collaboration.messages.send
  - "orchestration:operate"
- - collaboration.messages.list
  - "orchestration:read"
- - collaboration.context.put
  - "orchestration:operate"
- - collaboration.context.list
  - "orchestration:read"
- - collaboration.context.history
  - "orchestration:read"
- - collaboration.wait
  - "orchestration:read"
- - tasks.list
  - "orchestration:read"
- - tasks.stop
  - "orchestration:operate"
- - tasks.background
  - "orchestration:operate"
- - threads.regenerateTitle
  - "orchestration:operate"
- - threads.checkpoints
  - "orchestration:read"
- - threads.diff
  - "orchestration:read"
- - threads.revert
  - "orchestration:operate"
- - terminals.create
  - "terminal:operate"
- - terminals.list
  - "terminal:operate"
- - terminals.input
  - "terminal:operate"
- - terminals.resize
  - "terminal:operate"
- - terminals.close
  - "terminal:operate"
- - terminals.subscribe
  - "terminal:operate"
- - terminals.unsubscribe
  - "terminal:operate"
- - settings.get
  - "orchestration:read"
- - settings.update
  - "orchestration:operate"
- - computer.status
  - "orchestration:read"
- - computer.setup
  - "access:write"
- - cursor.status
  - "orchestration:read"
- - cursor.setup
  - "access:write"
- - computer.frame
  - "orchestration:read"
- - computer.notes.list
  - "orchestration:read"
- - computer.notes.set
  - "orchestration:operate"
- - usage.summary
  - "orchestration:read"
- - usage.limits
  - "orchestration:read"
- - access.pairing.create
  - "access:write"
- - access.exposure.get
  - "access:read"
- - access.exposure.set
  - "access:write"
- - access.tokens.list
  - "access:read"
- - access.tokens.revoke
  - "access:write"
- - git.status
  - "orchestration:read"
- - git.branches
  - "orchestration:read"
- - git.commit
  - "orchestration:operate"
- - github.pr.create
  - "orchestration:operate"
- - github.pr.list
  - "orchestration:read"
- - files.search
  - "orchestration:read"
- - files.list
  - "orchestration:read"
- - files.read
  - "orchestration:read"
- - threads.files.read
  - "orchestration:read"
- - skills.list
  - "orchestration:read"
- - integrations.list
  - "orchestration:read"
- - threads.artifacts.list
  - "orchestration:read"
- - threads.artifacts.read
  - "orchestration:read"
- - threads.artifacts.preview
  - "orchestration:read"
- - integrations.change
  - "orchestration:operate"
- - integrations.login
  - "terminal:operate"
- - approvals.respond
  - "orchestration:operate"
- - approvals.list
  - "orchestration:read"
- - events.subscribe
  - "orchestration:read"
- - events.unsubscribe
  - "orchestration:read"
- - events.range
  - "orchestration:read"
